# sentryshot

./: Cargo.toml
.github/workflows/: build-docker-image.yml  build.yml  test.yml
docs/: 1_Installation.md
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/public/: assets
frontend/public/assets/: icons
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/: AppSidebar.tsx  ThemeDropdownMenu.tsx  app-sidebar.tsx
frontend/src/components/logs-viewer/: FilterPopover.tsx  LevelBadge.tsx  LogBadge.tsx  PauseResumeButton.tsx  SolidTable.tsx  SourceBadge.tsx  columns.ts  columns.tsx  data-table.tsx
frontend/src/components/viewer/: live.js  recordings.js
frontend/src/components/viewer/components/: optionsMenu.js
frontend/src/components/viewer/libs/: common.js
frontend/src/contexts/: env-data.tsx
frontend/src/hooks/: useEnv.ts  useLiveViewer.ts  useRecordings.ts
frontend/src/pages/: LiveView.tsx  Logs.tsx  Recordings.tsx  Settings.tsx
misc/: utils.sh
misc/nix/: shell-x86_64.nix
plugins/frontend/: Cargo.toml  README.md  frontend.rs
plugins/openvino/: Cargo.toml
plugins/status/: Cargo.toml  status.rs
plugins/status/templates/: status.tpl
src/handler/: handler.rs
src/sentryshot/: app.rs
