[package]
name = "frontend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "frontend"
path = "frontend.rs"
crate-type = ["cdylib"]
doctest = false

[dependencies]
common.path = "../../src/common"
plugin.path = "../../src/plugin"
rust-embed.path = "../../src/rust-embed"

axum.workspace = true
async-trait.workspace = true
mime_guess.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
