[package]
name = "status"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "status"
path = "status.rs"
crate-type = ["cdylib"]
doctest = false

[dependencies]
common.path = "../../src/common"
plugin.path = "../../src/plugin"

axum.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
